--- a/ecg_update.ipynb
+++ b/ecg_update.ipynb
@@ -24,11 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load ECG datasets from provided paths\n",
     "mitbih_train = pd.read_csv(r\"C:\\Users\\ADMIN\\Documents\\Document\\USTH\\B3\\machine learning in medicine\\ecg data\\mitbih_train.csv\", header=None)\n",
     "mitbih_test = pd.read_csv(r\"C:\\Users\\ADMIN\\Documents\\Document\\USTH\\B3\\machine learning in medicine\\ecg data\\mitbih_train.csv\", header=None)\n",
     "ptbdb_abnormal = pd.read_csv(r\"C:\\Users\\ADMIN\\Documents\\Document\\USTH\\B3\\machine learning in medicine\\ecg data\\mitbih_train.csv\", header=None)\n",
@@ -37,21 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Combine PTBDB datasets (0 = normal, 1 = abnormal)\n",
     "ptbdb_combined = pd.concat([ptbdb_normal, ptbdb_abnormal])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare features and labels\n",
     "X_mitbih_train = mitbih_train.iloc[:, :-1].values\n",
     "y_mitbih_train = mitbih_train.iloc[:, -1].values\n",
     "X_mitbih_test = mitbih_test.iloc[:, :-1].values\n",
@@ -62,11 +59,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Normalize data\n",
     "scaler = StandardScaler()\n",
     "X_mitbih_train = scaler.fit_transform(X_mitbih_train)\n",
     "X_mitbih_test = scaler.transform(X_mitbih_test)\n",
@@ -75,11 +71,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reshape for CNN input\n",
     "X_mitbih_train = X_mitbih_train.reshape((*X_mitbih_train.shape, 1))\n",
     "X_mitbih_test = X_mitbih_test.reshape((*X_mitbih_test.shape, 1))\n",
     "X_ptbdb = X_ptbdb.reshape((*X_ptbdb.shape, 1))"
@@ -87,11 +82,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split PTBDB data\n",
     "X_ptb_train, X_ptb_test, y_ptb_train, y_ptb_test = train_test_split(\n",
     "    X_ptbdb, y_ptbdb, test_size=0.2, random_state=42, stratify=y_ptbdb\n",
     ")\n",
@@ -138,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -197,11 +191,8 @@
     }
    ],
    "source": [
-    "# Calculate class weights for MIT-BIH\n",
     "class_weights = compute_class_weight('balanced', classes=np.unique(y_mitbih_train), y=y_mitbih_train)\n",
     "class_weights = dict(enumerate(class_weights))\n",
-    "\n",
-    "# MIT-BIH model training\n",
     "mitbih_model = build_cnn_model((187, 1), 5)\n",
     "mitbih_history = mitbih_model.fit(\n",
     "    X_mitbih_train, y_mitbih_train,\n",
@@ -214,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -280,12 +271,10 @@
     "        Dense(128, activation='relu'),\n",
     "        Dropout(0.5),\n",
     "        Dense(64, activation='relu'),\n",
-    "        # Fixed output layer for binary classification\n",
     "        Dense(1 if num_classes == 2 else num_classes, \n",
     "              activation='sigmoid' if num_classes == 2 else 'softmax')\n",
     "    ])\n",
     "    \n",
-    "    # Updated loss function handling\n",
     "    if num_classes == 2:\n",
     "        loss = 'binary_crossentropy'\n",
     "    else:\n",
@@ -294,24 +283,22 @@
     "    model.compile(optimizer=Adam(0.001), loss=loss, metrics=['accuracy'])\n",
     "    return model\n",
     "\n",
-    "# PTBDB model setup and training (corrected)\n",
     "ptbdb_model = build_cnn_model((187, 1), 2)\n",
     "\n",
     "ptbdb_history = ptbdb_model.fit(\n",
     "    X_ptb_train, y_ptb_train,\n",
     "    epochs=20,\n",
     "    batch_size=32,\n",
-    "    validation_data=(X_ptb_test, y_ptb_test)  # Now using original binary labels\n",
+    "    validation_data=(X_ptb_test, y_ptb_test)\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualization function\n",
     "def plot_training_results(history, title):\n",
     "    plt.figure(figsize=(12, 4))\n",
     "    \n",
@@ -400,7 +387,6 @@
     }
    ],
    "source": [
-    "# MIT-BIH Evaluation\n",
     "y_pred_mitbih = np.argmax(mitbih_model.predict(X_mitbih_test), axis=1)\n",
     "print(\"\\nMIT-BIH Classification Report:\")\n",
     "print(classification_report(y_mitbih_test, y_pred_mitbih))\n",
@@ -411,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +445,6 @@
     }
    ],
    "source": [
-    "# PTBDB Evaluation\n",
     "y_pred_ptbdb = (ptbdb_model.predict(X_ptb_test) > 0.5).astype(int).flatten()\n",
     "print(\"\\nPTBDB Classification Report:\")\n",
     "print(classification_report(y_ptb_test, y_pred_ptbdb))\n",
@@ -470,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +471,6 @@
     }
    ],
    "source": [
-    "# Keep existing prediction examples\n",
     "print(\"\\nMIT-BIH Predictions (First 10 samples):\")\n",
     "mitbih_preds = np.argmax(mitbih_model.predict(X_mitbih_test[:10]), axis=1)\n",
     "print(f\"Actual:    {y_mitbih_test[:10]}\")\n",
